# visio_bridge

./: .gitignore  AGENTS.md  README.md  README_CN.md  __init__.py  pyproject.toml
docs/: circuit_template_design_principles_cn.md  examples.md  examples_cn.md  symbol_library_v14_cn.md
scripts/: update_codex_skills.py
skills/design_rules/: SKILL.md
skills/doc_page_settings/: SKILL.md
skills/file_inspector/: SKILL.md
skills/instance_manager/: SKILL.md
skills/symbol_editor/: SKILL.md
skills/visio-design-rules/: SKILL.md
skills/visio-design-rules/agents/: openai.yaml
skills/visio-doc-page-settings/: SKILL.md
skills/visio-doc-page-settings/agents/: openai.yaml
skills/visio-file-inspector/: SKILL.md
skills/visio-file-inspector/agents/: openai.yaml
skills/visio-instance-manager/: SKILL.md
skills/visio-instance-manager/agents/: openai.yaml
skills/visio-session-manager/: SKILL.md
skills/visio-session-manager/agents/: openai.yaml
skills/visio-symbol-editor/: SKILL.md
skills/visio-symbol-editor/agents/: openai.yaml
skills/visio_session_manager/: SKILL.md
src/: __init__.py
src/core/: bridge.py  config.py  formula_cache.py  locator.py  setup_cli.py  xml_utils.py
src/design/: __init__.py  context.py  engine.py  model.py  profile_docs.py
src/design/profiles/: CIRCUIT_SCHEMATIC_PROFILE.md  __init__.py  circuit_diagram.py
src/desktop/: __init__.py  pdf_export.py  session.py  session_control.py
src/skill/: __init__.py  backend.py  doc_settings.py  instance_manager.py  master_builder.py  symbol_editor.py
(+1 files in other folders)
